Use Lombok and Adventure reformatting